app/src/test/resources/programs/invalid/foonctions/passingFunctionToAnotherFunction.exe
foo g(a: Int, b: Int) -> Int = a + b;

foo main() -> Int = {
    g(g, 1);
    0
}
